[package]
name = "gogh"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
candle-core = "0.4.0"
prost = "0.13.1"
prost-build = "0.13.1"
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
stable-diffusion = { version = "0.1.9", default-features = false }
tokio = { version = "1.39.2", features = ["full"] }
tonic = "0.12.1"
tonic-build = "0.12.1"
uuid = { version = "1.10.0", features = ["v7"] }


[build-dependencies]
tonic-build = "0.12.1"
